test/scc_test/decl/semantic-errors/034.t
struct A
{
    int x;
};

enum A
{
    B
};
